--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <link href="css/styles.css" rel="stylesheet" title="html/css">
 </head>
 <body>
-  <h1>Physics</h1>
-  <img src="img/physics.jpg" class="intro">
-  <h2 class="intro">Introduction</h2>
-  <p class="intro">
+  <div class="intro">
+    <h1>Physics</h1>
+    <img src="img/physics.jpg">
+    <h2>Introduction</h2>
+    <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
-
-  <p class="intro">
+    </p>
+    
+    <p>
     Lmco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-  </p>
+    </p>
+    
+  </div>  
 </body>
 </html>
