--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="img/physics.jpg">
     <h2>Introduction</h2>
     <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Lorem ipsum <span class="span">dolom</span>  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     
     <p>
@@ -20,4 +20,4 @@
     
   </div>  
 </body>
-</html>
+</html> 
