add background color, borders, and responsivity
co-authored-by: Brady Diamond <brdydmnd@gmail.com>

co-authored-by: Jake Edgar <jakeedgar1012@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 <body>
   <div class="intro">
-    <h1>Physics</h1>
-    <img src="img/physics.jpg">
+    <div class="title">
+      <h1>Physics</h1>
+      <img src="img/physics.jpg">
+  </div>
     <h2>Introduction</h2>
     <p>
-    Lorem ipsum <span class="span">dolom</span>  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Lorem ipsum <span class="span">dolom</span>  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim  anim id est laborum.
     </p>
     
     <p>
-    Lmco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Lmco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     
   </div>  
