--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Physics Lecture</title>
   <link href="css/styles.css" rel="stylesheet" title="html/css">
 </head>
-<body>
+<body class="bg-image">
   <div class="intro">
     <div class="title">
       <h1>Physics</h1>
@@ -19,7 +19,6 @@
     <p>
     Lmco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    
   </div>  
 </body>
 </html> 
