--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
   <link href="css/styles.css" rel="stylesheet" title="html/css">
 </head>
 <body class="bg-image">
+  <div class="sidebar">
+    <ul>
+      <li><a href="https://example.com/lectures">Lectures</a></li>
+      <li><a href="https://example.com/practices">Practices</a></li>
+      <li><a href="https://example.com/Terms">Terms</a></li>
+      <li><a href="https://example.com/Resources">Resources</a></li>
+    </ul>
+  </div>
   <div class="intro">
     <div class="title">
       <h1>Physics</h1>
       <img src="img/physics.jpg">
-  </div>
+    </div>
     <h2>Introduction</h2>
     <p>
     Lorem ipsum <span class="span">dolom</span>  sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laore at cupidatat non proident, sunt in culpa qui officia deserunt mollit mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim  anim id est laborum.
