--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body class="bg-image">
   <div class="sidebar">
     <ul>
-      <li><a href="https://example.com/lectures">Lectures</a></li>
-      <li><a href="https://example.com/practices">Practices</a></li>
-      <li><a href="https://example.com/Terms">Terms</a></li>
-      <li><a href="https://example.com/Resources">Resources</a></li>
+      <li><a href="https://example.com/lectures.html">Lectures</a></li>
+      <li><a href="https://example.com/practices.html">Practices</a></li>
+      <li><a href="https://example.com/terms.html">Terms</a></li>
+      <li><a href="https://example.com/resources.html">Resources</a></li>
     </ul>
   </div>
   <div class="intro">
