--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <ul>
       <li><a href="https://example.com/lectures.html">Lectures</a></li>
       <li><a href="https://example.com/practices.html">Practices</a></li>
-      <li><a href="https://example.com/terms.html">Terms</a></li>
-      <li><a href="https://example.com/resources.html">Resources</a></li>
+      <li><a href="https://example.com/terms">Terms</a></li>
+      <li><a href="https://example.com/resources">Resources</a></li>
+      <li><a href="https://example.com/blah">blah</a></li>
     </ul>
   </div>
   <div class="intro">
