--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     Lmco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <p>Click a button to choose what color you'd like this page to be:</p>
-    <button class="btn light" id="light">Light</button>
-    <button class="btn dark" id="dark">Dark</button>
+    <button class="light">Light</button>
+    <button class="dark">Dark</button>
   </div>  
 </body>
 </html> 
